gccida/g1/purge_addressof_1
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_addressof_1/src/function.c:3499:68: error: unknown type name 'hash_table_0'; did you mean 'hash_table'?
bool  purge_addressof_1( rtx *loc, rtx insn, int force, int store, hash_table_0 *ht) 
                                                                   ^~~~~~~~~~~~
                                                                   hash_table
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_addressof_1/src/hashtable.h:40:19: note: 'hash_table' declared here
typedef struct ht hash_table;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_addressof_1/src/function.c:3499:7: error: conflicting types for 'purge_addressof_1'
bool  purge_addressof_1( rtx *loc, rtx insn, int force, int store, hash_table_0 *ht) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_addressof_1/src/function.c:293:13: note: previous declaration is here
static bool purge_addressof_1 PARAMS ((rtx *, rtx, int, int,
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_addressof_1/src/function.c:3530:4: error: expected ';' after expression
rtx v35; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_addressof_1/src/function.c:3530:5: error: use of undeclared identifier 'v35'
rtx v35; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_addressof_1/src/function.c:3531:4: error: expected ';' after expression
rtx v36; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_addressof_1/src/function.c:3531:5: error: use of undeclared identifier 'v36'
rtx v36; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_addressof_1/src/function.c:3534:6: error: use of undeclared identifier 'fld'; did you mean 'fold'?
rtx *fld; // rbp 
     ^~~
     fold
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_addressof_1/src/tree.h:2822:13: note: 'fold' declared here
extern tree fold                PARAMS ((tree));
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_addressof_1/src/function.c:3534:5: error: invalid operands to binary expression ('struct rtx_def *' and 'tree (tree)' (aka 'union tree_node *(union tree_node *)'))
rtx *fld; // rbp 
~~~ ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_addressof_1/src/function.c:3537:4: error: expected ';' after expression
rtx v42; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_addressof_1/src/function.c:3537:5: error: use of undeclared identifier 'v42'
rtx v42; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_addressof_1/src/function.c:3541:4: error: expected ';' after expression
rtx insna; // [rsp+0h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_addressof_1/src/function.c:3541:5: error: use of undeclared identifier 'insna'
rtx insna; // [rsp+0h] [rbp-58h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_addressof_1/src/function.c:3545:1: error: use of undeclared identifier 'insna'
insna = insn; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_addressof_1/src/function.c:3558:32: error: expected expression
v6 = purge_addressof_1( ( rtx *)v13->fld, insn, force, 1, ht); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_addressof_1/src/function.c:3559:41: error: expected expression
LOBYTE( v7) = purge_addressof_1( ( rtx *)&v13[1], insn, force, 0, ht) && v6; 
                                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_addressof_1/src/function.c:3564:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v8.rtwint = ( __int64)v13->fld[0]; 
                      ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_addressof_1/src/function.c:3567:24: error: expected expression
v9 = copy_rtx( *( rtx *)( v8.rtwint + 8)); 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_addressof_1/src/function.c:3590:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v16.rtwint = ( __int64)v13->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_addressof_1/src/function.c:3601:25: error: expected ')'
adjust_address_1( ( rtx)v17, ( machine_mode)*( ( unsigned __int8 *)v13 + 2), 0LL, 0, 1); 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_addressof_1/src/function.c:3601:17: note: to match this '('
adjust_address_1( ( rtx)v17, ( machine_mode)*( ( unsigned __int8 *)v13 + 2), 0LL, 0, 1); 
                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_addressof_1/src/obj/function.o] Error 1
